--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 <body>
 	<script language="javascript">
 <!--hide
-var password;
-var pass1="nnn";
-password=prompt('You Have To Get Permission or Be a Family Member','');
-if (password==pass1);
-else {
-  window.location="https://nour-rabea.github.io/New-Cairo/";
-}
+///var password;
+///var pass1="nnn";
+///password=prompt('You Have To Get Permission or Be a Family Member','');
+///if (password==pass1);
+///else {
+///  window.location="https://nour-rabea.github.io/New-Cairo/";
+///}
 //-->
 </script>
 
