--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 ///password=prompt('You Have To Get Permission or Be a Family Member','');
 ///if (password==pass1);
 ///else {
-///  window.location="https://nour-rabea.github.io/New-Cairo/";
+///  window.location="https://nour-rabea.github.io/Ever-East/";
 ///}
 //-->
 </script>
