--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body>
 	<script language="javascript">
-<!--hide
+///<!--hide
 ///var password;
 ///var pass1="nnn";
 ///password=prompt('You Have To Get Permission or Be a Family Member','');
@@ -79,7 +79,8 @@
 
   <div class="loader">Loading...</div>
   <div id="map"></div>
-  <table id="maptable" class="display"></table>
+<table id="maptable" class="display" onclick="addRowHandlers()"></table>
+<button id="container" class="btn" onclick="myFunction()">Data Table</button>
 
   <script type="text/javascript">
     var map = L.map('map', {
@@ -87,21 +88,52 @@
       zoomControl: false,
       scrollWheelZoom: true,
       tap: false
-    }).setView([30.02, 31.55], 11);
+    }).setView([30.02, 31.55], 11); // default center is overridden by Google Sheet options and points
 
-    var backgroundLayer = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png');
-	  
-    var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-    });
-    map.addLayer(Esri_WorldImagery);
-	  
-    var imageUrl = 'media/favicon.png',
-    	imageBounds = [[30.027953, 31.457672], [30.026673, 31.459449]];
+    var imageUrl = 'media/layout.png',
+    	imageBounds = [[29.994293, 31.574531], [29.933195, 31.521640], [29.921658, 31.583310]];
 	L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
   </script>
 
+<script>
+  function myFun() {
+    map.flyTo([30.002088,30.969116], 15);
+  }
+  </script>
+  
+    <script>
+  function myFunction() {
+    let x = document.getElementById("maptable");
+    x.style.fontSize = "15px"; 
+    x.style.color = "red"; 
+  }
+  </script>
+    
+    <script>
+  function addRowHandlers() {
+    var table = document.getElementById("maptable");
+    var rows = table.getElementsByTagName("tr");
+    for (i = 0; i < rows.length; i++) {
+      var currentRow = table.rows[i];
+      var createClickHandler = function(row) {
+        return function() {
+          ///console.log(e);
+          ///console.log($(this).html());
+          ///console.log($(e).html());
+          var lat = row.getElementsByTagName("td")[11].innerHTML;
+          var lon = row.getElementsByTagName("td")[12].innerHTML;
+              map.flyTo([lat,lon], 15, { animate:true, duration:3 } )
+          ///});
+          ///var cell = row.getElementsByTagName("td")[0];
+          ///var id = cell.innerHTML;
+          ///alert("id:" + id);
+        };
+      };
+      currentRow.onclick = createClickHandler(currentRow);
+    }
+  }
+  </script>
   <script type="text/javascript" src="./google-doc-url.js"></script>
   <script type="text/javascript" src="./scripts/constants.js"></script>
   <script type="text/javascript" src="./scripts/palette.js"></script>
