--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body>
 	<script language="javascript">
-///<!--hide
+<!--hide
 ///var password;
 ///var pass1="nnn";
 ///password=prompt('You Have To Get Permission or Be a Family Member','');
