--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 ///  window.location="https://nour-rabea.github.io/Ever-East/";
 ///}
 //-->
-</script>
+	</script>
 
   <div class="loader">Loading...</div>
   <div id="map"></div>
@@ -101,13 +101,13 @@
   }
   </script>
   
-    ///<script>
-  ///function myFunction() {
-    ///let x = document.getElementById("maptable");
-    ///x.style.fontSize = "15px"; 
-    ///x.style.color = "red"; 
-  ///}
-  ///</script>
+    <script>
+  function myFunction() {
+    let x = document.getElementById("maptable");
+    x.style.fontSize = "15px"; 
+    x.style.color = "red"; 
+  }
+  </script>
     
     <script>
   function addRowHandlers() {
@@ -132,7 +132,8 @@
       currentRow.onclick = createClickHandler(currentRow);
     }
   }
-  </script>
+</script>
+	
   <script type="text/javascript" src="./google-doc-url.js"></script>
   <script type="text/javascript" src="./scripts/constants.js"></script>
   <script type="text/javascript" src="./scripts/palette.js"></script>
