--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 	</script>
 
   <div class="loader">Loading...</div>
-  <div id="map"></div>
+  <div id="map">
+  </div>
+	
 <table id="maptable" class="display"></table>
-<button id="container" class="btn">Data Table</button>
+<button id="container" class="btn">Analysis</button>
 
   <script type="text/javascript">
     var map = L.map('map', {
@@ -88,7 +90,7 @@
       zoomControl: false,
       scrollWheelZoom: true,
       tap: false
-    }).setView([30.02, 31.55], 11); // default center is overridden by Google Sheet options and points
+    }).setView([30.02,31.55], 11); // default center is overridden by Google Sheet options and points
 
     var imageUrl = 'media/layout.png',
    	imageBounds = [[29.994293, 31.574531], [29.933195, 31.521640], [29.921658, 31.583310]];
