--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
       tap: false
     }).setView([30.02,31.55], 11); // default center is overridden by Google Sheet options and points
 
-    ///var imageUrl = 'media/layout.png',
-   	///imageBounds = [[29.994293, 31.574531], [29.933195, 31.521640], [29.921658, 31.583310]];
-	///L.imageOverlay(imageUrl, imageBounds).addTo(map);
+    var imageUrl = 'media/Ever New Cairo.png',
+   	imageBounds = [[29.96082394542264, 31.551824360849114], [29.95878863958161, 31.572030310322205], [29.946888523035046, 31.571582159250166], [29.947827600512134, 31.551560355430034]];
+	L.imageOverlay(imageUrl, imageBounds).addTo(map);
   </script>
 
 <script>
